--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h1 {
 
 p {
     font-size: 1.2em;
-    margin: 8px 0;
+    margin-bottom: 15px;
     font-weight: 500;
     letter-spacing: 0.5px;
 }
