Adjusted margins and padding for better alignment across elements.

--- a/styles.css
+++ b/styles.css
@@ -187,10 +187,11 @@ span {
     h1 {
         font-size: 1.6em;
         margin-top: 2px;
+        margin-bottom: 15px;
     }
 
     p {
-        font-size: 0.8em;
+        font-size: 0.7em;
     }
 
     .button {
